--- a/example_notebooks/example_WIP.ipynb
+++ b/example_notebooks/example_WIP.ipynb
@@ -628,6 +628,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "displacements = kemstem.atomic.periodicdistortion.measure_displacements(c_masked,cf,threshold=0.4)#kemstem.util.point.get_nearest_points(c_masked,cf,k=1)[0] - cf\n",
+    "\n",
+    "\n",
     "scale = 2e3 # scale factor for the triangles\n",
     "colors = 'angle' # 'angle' or 'mag'\n",
     "\n",
@@ -654,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
